.kubernetes/mysql.service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-live
  namespace: shane-directory-app
spec:
  selector:
    app: mysql-live
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
