.kubernetes/redis.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
  namespace: shane-directory-app
  labels:
    app: redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: shane-directory-app
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-cache
  type: ClusterIP
