.kubernetes/live-web.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directory-app-office-netblink-net-http
  namespace: shane-directory-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  rules:
  - host: "directory-app.office.netblink.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: directory-app-live
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directory-app-office-netblink-net-https
  namespace: shane-directory-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: "directory-app.office.netblink.net"
spec:
  rules:
  - host: "directory-app.office.netblink.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: directory-app-live
            port:
              number: 80
